# papylio

./: README.md  pyproject.toml
papylio/: experiment.py  file.py  netcdf_operations.py  trace_correction.py  trace_extraction.py  trace_plot.py
papylio/analysis/: hidden_markov_modelling.py
papylio/gui/: classification_widget.py  main.py  selection_widget.py  start.py
papylio/movie/: basic_shading_correction.py  movie.py  shading_correction.py
papylio/plugins/sequencing/: Example.py  plotting.py  sequencing_data.py
