# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
papylio = ["logo.png"]

[tool.setuptools_scm]
version_file = "papylio/_version.py"
version_scheme = "only-version"
local_scheme = "node-and-date"

[project]
name = "papylio"
dynamic = ["version"]
description = "Single-molecule fluorescence data extraction and analysis."
readme = "README.md"
authors = [{ name = "Ivo Severins", email = "i.w.h.severins@tudelft.nl" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
keywords = ["single", "molecule", "trace", "analysis", "fluorescence", "FRET"]
dependencies = [
    "numpy >= 1.22, <2.0",
    "matplotlib >= 3.5",
    "pathlib2 >= 2.3",
    "opencv-python >= 4.5",
    "tabulate >= 0.8",
    "scipy >= 1.8",
    "scikit-image >= 0.19, <0.20",
    "scikit-learn >= 1.0",
    "pyyaml >= 6.0",
    "pandas >= 1.4",
    "seaborn >= 0.11",
    "openpyxl >= 3.0",
    "nd2reader >= 3.3",
    "xarray >= 2023.1",
    "netcdf4 >= 1.6",
    "h5netcdf >= 1.0",
    "dask >= 2023.1",
    "dask-image >= 2021.12",
    "bottleneck >= 1.3",
    "tifffile >= 2022.10",
    "tqdm >= 4.63",
    "pyside6 >= 6.4",
    "numba >= 0.56",
    "pomegranate == 0.14.8",
    "matchpoint >= 1.0.4",
    "objectlist >= 1.0",
    "h5py >= 3.0",
]
requires-python = ">=3.9"

[project.urls]
Documentation = "https://papylio.readthedocs.io/"
Repository = "https://github.com/Chirlmin-Joo-lab/papylio"

[project.optional-dependencies]
sparxs = ["matplotlib-venn == 0.11", "perl"]
gui = []
dev = ["pytest","pytest-datadir","build","twine","sphinx","sphinx-book-theme","setuptools_scm>=8"]

[tool.pytest.ini_options]
pythonpath = ["papylio"]
testpaths = [
    "tests",
    "integration",
]